import old blog

--- a/_posts/0000-00-00-agendav.md
+++ b/_posts/0000-00-00-agendav.md
@@ -1,9 +1,11 @@
 ---
+layout: post
 title: AgenDAV: ein eigener Kalender online, ohne eigenen Server
 date: 2012-10-25
-tags: [software, ownwcloud]
-layout: post
+tags: software ownwcloud
+permalink: 2012/10/25/de/agendav-ein-eigener-kalender-online-ohne-eigenen-server/
 ---
+
 **Ergänzung: dies ist alles viel genauer auf [wolkoid.de](http://wolkoid.de)
 erklärt**
 
