--- a/_posts/0000-00-00-eiszeit.md
+++ b/_posts/0000-00-00-eiszeit.md
@@ -1,7 +1,9 @@
 ---
+layout: post
 date: 2013-05-21
 title: Die erste web app: EisZeit
 tag: code
+permalink: /2013/05/21/de/die-erste-web-app-eiszeit/
 ---
 
 ich habe meine erste Webapp entwickelt:
