testing how to wrap lines in YAML frontmatter

--- a/_posts/2013-01-06-wolkoid.md
+++ b/_posts/2013-01-06-wolkoid.md
@@ -1,8 +1,6 @@
 ---
 title: Neue Webseite
-summary: Ich habe eine neue Webseite aufgesetzt die erklärt wie man mit wenig
-Mühe eigene Webdienste aufsetzen kann und sich somit von Google und co.
-unabhängig macht
+summary: Ich habe eine neue Webseite aufgesetzt die erklärt wie man mit wenig Mühe eigene Webdienste aufsetzen kann und sich somit von Google und co. unabhängig macht
 date: 2013-01-06
 permalink: /2013/01/06/de/neue-webseite/
 ---
