testing how to wrap lines in YAML frontmatter, scond try

--- a/_posts/2012-10-25-agendav.md
+++ b/_posts/2012-10-25-agendav.md
@@ -1,9 +1,10 @@
 ---
 layout: post
 title: AgenDAV: ein eigener Kalender online, ohne eigenen Server
-summary:    Hier beschreibe ich wie man mit der Software [AgenDAV](http://agendav.org "AgenDAV") einen eigenen Onlinekalender erstelle kann, ähnlich zu Google
-            Calendar und das ganze ohne eigenen Server, sondern alleine mit einem Webseiten
-            Hostingpaket (mit PHP und MySQL Datenbankunterstützung).
+summary: |
+    Hier beschreibe ich wie man mit der Software [AgenDAV](http://agendav.org "AgenDAV") einen eigenen Onlinekalender erstelle kann, ähnlich zu Google
+    Calendar und das ganze ohne eigenen Server, sondern alleine mit einem Webseiten
+    Hostingpaket (mit PHP und MySQL Datenbankunterstützung).
 date: 2012-10-25 11:30:00
 tags: software owncloud
 permalink: /2012/10/25/de/agendav-ein-eigener-kalender-online-ohne-eigenen-server/
