try to fix problem with YAML frontmatter

--- a/_posts/2013-05-21-eiszeit.md
+++ b/_posts/2013-05-21-eiszeit.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 date: 2013-05-21 11:30:00
-title: Die erste web app: EisZeit
+title: Die erste web app\: EisZeit
 summary: Meine erste Webapp
 tag: code
 permalink: /2013/05/21/de/die-erste-web-app-eiszeit/
 ---
-ich habe meine erste Webapp entwickelt:
+Ich habe meine erste Webapp entwickelt:
 [EisZeit](http://playground.sam-d.com/ice). Damit kann man die nächsten
 Eisdielen in seiner Umgebung angezeigt bekommen.  Den Code gibt es auf
 [GitHub](https://github.com/sam-d/eiszeit).
