--- a/_posts/2013-05-21-eiszeit.md
+++ b/_posts/2013-05-21-eiszeit.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2013-05-21 11:30:00
-title: Die erste web app\: EisZeit
+title: "Die erste web app: EisZeit"
 summary: Meine erste Webapp
 tag: code
 permalink: /2013/05/21/de/die-erste-web-app-eiszeit/
