fix YAML header

--- a/_posts/2012-10-25-agendav.md
+++ b/_posts/2012-10-25-agendav.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: AgenDAV: ein eigener Kalender online, ohne eigenen Server
+title: "AgenDAV: ein eigener Kalender online, ohne eigenen Server"
 summary: |
     Hier beschreibe ich wie man mit der Software [AgenDAV](http://agendav.org "AgenDAV") einen eigenen Onlinekalender erstelle kann, ähnlich zu Google
     Calendar und das ganze ohne eigenen Server, sondern alleine mit einem Webseiten
